# manage_event

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.prod.yaml  docker-compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
event_administrator/: asgi.py  urls.py  wsgi.py
event_administrator/settings/: base.py  dev.py  prod.py
manage_currency/: admin.py  apps.py  create_team.py  distrib_cash.py  forms.py  make_test_data.py  manage.py  models.py  urls.py  variables.py  views.py
manage_currency/manage_currency/: asgi.py  settings.py  urls.py  wsgi.py
manage_currency/migrations/: 0001_initial.py  0002_alter_member_is_employee_alter_member_is_on_time_and_more.py  0003_alter_member_job.py  0004_remove_member_is_on_time_member_is_late_and_more.py  0005_alter_member_group.py  0006_member_is_present.py  0007_answer_quiz_quizoption_finishedquiz_and_more.py  0008_alter_member_group_alter_team_leader.py  0009_alter_team_leader.py  0010_team_rank.py  0011_remove_team_rank_alter_quiz_primary.py  0012_finishedquiz_selected_choice_alter_quiz_answer.py  0013_alter_answer_quiz_alter_quiz_answer.py  0014_remove_finishedquiz_quizes_finishedquiz_quiz_and_more.py  0015_alter_finishedquiz_selected_choice.py  0016_transaction_is_canceled.py  0017_product_stock.py  0018_purchase_quantity.py  0019_allcash.py  0020_alter_allcash_all_cash.py  0021_remove_allcash_is_current.py  0022_allcash_is_current.py  0023_remove_allcash_is_current.py
nginx/: nginx.conf
(+32 files in other folders)
