[tool.black]
line-length = 100

[tool.isort]
known_django = ["django"]
line_length = 100
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
name = "event_administrator"
version = "0.1.0"
description = ""
authors = ["DeMiA inc."]

[tool.poetry.dependencies]
python = "^3.8"
django-pipeline = "^2.0.8"
dj-database-url = "^0.5.0"
Django = "^4.0.4"
python-dotenv = "^0.20.0"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"
toml-sort = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
